--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,7 +5,7 @@ Version: 0.0.0.9000
 Authors@R: c(
     person("Michael", "Rustler", , "michael.rustler@kompetenz-wasser.de", role = c("aut", "cre"),
            comment = c(ORCID = "0000-0003-0647-7726")),
-    person("RAINDROP", role = "fnd"),           
+    person("RAINDROP", role = "fnd"),
     person("Kompetenzzentrum Wasser Berlin gGmbH (KWB)", role = "cph")
   )
 Description: R Package for Optimisation Simulations for Rainwater
@@ -14,18 +14,20 @@ Description: R Package for Optimisation Simulations for Rainwater
 License: MIT + file LICENSE
 URL: https://github.com/KWB-R/kwb.raindrop
 BugReports: https://github.com/KWB-R/kwb.raindrop/issues
-Encoding: UTF-8
-Roxygen: list(markdown = TRUE)
-RoxygenNote: 7.3.2
 Imports: 
     fs,
     hdf5r,
     kwb.utils,
+    magrittr,
     stringr
 Suggests: 
     covr,
     knitr,
     rmarkdown
+VignetteBuilder: 
+    knitr
 Remotes:
     github::kwb-r/kwb.utils
-VignetteBuilder: knitr
+Encoding: UTF-8
+Roxygen: list(markdown = TRUE)
+RoxygenNote: 7.3.2
