--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,13 +15,17 @@ License: MIT + file LICENSE
 URL: https://github.com/KWB-R/kwb.raindrop
 BugReports: https://github.com/KWB-R/kwb.raindrop/issues
 Imports: 
+    dplyr,
     fs,
     hdf5r,
     kwb.utils,
     magrittr,
-    stringr
+    purrr, 
+    stringr,
+    tibble
 Suggests: 
     covr,
+    ggplot2,
     knitr,
     rmarkdown
 VignetteBuilder: 
