--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,3 +23,4 @@ importFrom(stats,setNames)
 importFrom(stringr,str_c)
 importFrom(tibble,as_tibble)
 importFrom(tibble,tibble)
+importFrom(utils,tail)
