--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,15 +5,27 @@ export(h5_read_values)
 export(h5_validate_write)
 export(h5_write_values)
 export(list_h5_datasets)
+export(plot_hpond_vs_ref)
 export(read_hdf5_timeseries)
 export(run_model)
+importFrom(dplyr,"%>%")
 importFrom(dplyr,bind_rows)
 importFrom(dplyr,filter)
+importFrom(dplyr,mutate)
 importFrom(dplyr,pull)
 importFrom(fs,dir_create)
 importFrom(fs,file_copy)
 importFrom(fs,file_exists)
 importFrom(fs,path_abs)
+importFrom(ggplot2,aes)
+importFrom(ggplot2,facet_wrap)
+importFrom(ggplot2,geom_hline)
+importFrom(ggplot2,geom_line)
+importFrom(ggplot2,geom_point)
+importFrom(ggplot2,ggplot)
+importFrom(ggplot2,labs)
+importFrom(ggplot2,scale_shape_manual)
+importFrom(ggplot2,theme_bw)
 importFrom(hdf5r,H5File)
 importFrom(kwb.utils,catAndRun)
 importFrom(kwb.utils,resolve)
