Adapt workflow for new calculation engine

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,10 +7,14 @@ export(h5_validate_write)
 export(h5_write_values)
 export(list_h5_datasets)
 export(plot_hpond_vs_ref)
+export(read_hdf5_connections)
+export(read_hdf5_scalars)
 export(read_hdf5_timeseries)
 export(run_model)
 importFrom(dplyr,bind_rows)
 importFrom(dplyr,filter)
+importFrom(dplyr,left_join)
+importFrom(dplyr,mutate)
 importFrom(dplyr,pull)
 importFrom(fs,dir_create)
 importFrom(fs,file_copy)
