--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -16,6 +16,7 @@ URL: https://github.com/KWB-R/kwb.raindrop
 BugReports: https://github.com/KWB-R/kwb.raindrop/issues
 Imports: 
     dplyr,
+    forcats,
     fs,
     ggplot2,
     hdf5r,
