--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,26 +7,60 @@ export(h5_validate_write)
 export(h5_write_values)
 export(list_h5_datasets)
 export(plot_hpond_vs_ref)
+export(plot_main_effects)
+export(plot_valid_design_space)
 export(read_hdf5_connections)
 export(read_hdf5_scalars)
 export(read_hdf5_timeseries)
 export(run_model)
+importFrom(dplyr,"%>%")
+importFrom(dplyr,all_of)
 importFrom(dplyr,bind_rows)
+importFrom(dplyr,case_when)
 importFrom(dplyr,filter)
+importFrom(dplyr,group_by)
 importFrom(dplyr,left_join)
 importFrom(dplyr,mutate)
+importFrom(dplyr,n)
+importFrom(dplyr,n_distinct)
 importFrom(dplyr,pull)
+importFrom(dplyr,select)
+importFrom(dplyr,summarise)
+importFrom(dplyr,ungroup)
+importFrom(forcats,fct_reorder)
 importFrom(fs,dir_create)
 importFrom(fs,file_copy)
 importFrom(fs,file_exists)
 importFrom(fs,path_abs)
+importFrom(ggplot2,aes)
+importFrom(ggplot2,coord_cartesian)
+importFrom(ggplot2,element_text)
+importFrom(ggplot2,facet_wrap)
+importFrom(ggplot2,geom_boxplot)
+importFrom(ggplot2,geom_jitter)
+importFrom(ggplot2,geom_point)
+importFrom(ggplot2,geom_violin)
+importFrom(ggplot2,ggplot)
+importFrom(ggplot2,guides)
+importFrom(ggplot2,labs)
+importFrom(ggplot2,position_identity)
+importFrom(ggplot2,position_jitter)
+importFrom(ggplot2,scale_alpha_identity)
+importFrom(ggplot2,scale_colour_manual)
+importFrom(ggplot2,scale_x_discrete)
+importFrom(ggplot2,scale_y_discrete)
+importFrom(ggplot2,theme)
+importFrom(ggplot2,theme_bw)
 importFrom(hdf5r,H5File)
 importFrom(kwb.utils,catAndRun)
 importFrom(kwb.utils,resolve)
 importFrom(magrittr,"%>%")
 importFrom(purrr,map_dfr)
+importFrom(rlang,.data)
+importFrom(stats,median)
 importFrom(stats,setNames)
 importFrom(stringr,str_c)
 importFrom(tibble,as_tibble)
 importFrom(tibble,tibble)
+importFrom(tidyr,pivot_longer)
 importFrom(utils,tail)
