--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -38,7 +38,7 @@ Suggests:
 VignetteBuilder: 
     knitr
 Remotes:
-    github::kwb-r/kwb.event
+    github::kwb-r/kwb.event,
     github::kwb-r/kwb.utils
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
